# rehydration-kernel

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  baseline-planner-v1.yaml  baseline-v18-no-thinking.yaml  paper-recalc-gpt54.yaml  sonar-project.properties
crates/rehydration-adapter-nats/: Cargo.toml
crates/rehydration-adapter-nats/src/: consumer.rs  context_event_store.rs  error.rs  lib.rs  payload_decoding.rs  subject_routing.rs  tests.rs
crates/rehydration-adapter-nats/tests/: compatibility_async.rs  context_event_store_integration.rs  runtime_integration.rs
crates/rehydration-adapter-neo4j/: Cargo.toml
crates/rehydration-adapter-neo4j/src/: lib.rs
crates/rehydration-adapter-neo4j/tests/: neo4j_integration.rs
crates/rehydration-adapter-valkey/: Cargo.toml
crates/rehydration-adapter-valkey/src/: lib.rs
crates/rehydration-adapter-valkey/tests/: valkey_integration.rs
crates/rehydration-application/: Cargo.toml
crates/rehydration-application/src/: application_error.rs  lib.rs  projection.rs  rehydration_application.rs
crates/rehydration-application/tests/: unit_services.rs
crates/rehydration-demo-starship/: Cargo.toml
crates/rehydration-demo-starship/src/: anthropic_client.rs  demo_config.rs  demo_runner.rs  file_system_runtime.rs  lib.rs  llm_planner.rs  openai_compat_client.rs  projection_contract.rs  runtime_http_client.rs  scenario.rs  starship_runtime_tools.rs
crates/rehydration-mcp/: Cargo.toml  README.md
crates/rehydration-mcp/src/: args.rs  backend.rs  fixture.rs  grpc.rs  ingest.rs  kmp.rs  lib.rs  main.rs  observability.rs  protocol.rs  server.rs  write.rs
crates/rehydration-mcp/tests/: grpc_backend.rs  stdio_binary.rs  stdio_protocol.rs
crates/rehydration-observability/: Cargo.toml
crates/rehydration-observability/src/: lib.rs  metrics.rs  quality_observers.rs
crates/rehydration-plugin-api/: Cargo.toml
crates/rehydration-plugin-api/src/: lib.rs
crates/rehydration-proto/: Cargo.toml  build.rs
crates/rehydration-proto/src/: asyncapi_contract_tests.rs  compatibility_contract_tests.rs  kernel_contract_tests.rs  kernel_v1beta1_contract_tests.rs  lib.rs  reference_fixture_contract_tests.rs
crates/rehydration-server/: Cargo.toml
crates/rehydration-server/src/: compatibility_nats_runtime.rs  main.rs  nats_tls.rs  projection_nats_runtime.rs
crates/rehydration-testkit/: Cargo.toml
crates/rehydration-testkit/resources/: evaluation-matrix.smoke.yaml  evaluation-matrix.yaml  llm_prompts.yaml
crates/rehydration-testkit/src/: container_runtime.rs  dataset_generator.rs  graph_batch_llm.rs  in_memory_stores.rs  interpretation_plugins.rs  kernel_operator.rs  lib.rs  llm_evaluator.rs  llm_graph.rs  longmemeval.rs  longmemeval_smart_writer.rs  memoryagentbench.rs  memoryarena.rs  memoryarena_scorecard.rs  memoryarena_smart_writer.rs  raw_dump.rs  seed_publisher.rs  seed_to_bundle.rs  text_normalization.rs
crates/rehydration-testkit/tests/: kernel_write_memory_prompt_fixture.rs  longmemeval_adapter.rs  memoryagentbench_adapter.rs  memoryarena_adapter.rs  pir_graph_batch_roundtrip_smoke.rs  vllm_graph_batch_roundtrip_smoke.rs  vllm_graph_blind_context_smoke.rs  vllm_graph_blind_prompt_smoke.rs  vllm_graph_blind_structural_smoke.rs  vllm_graph_prompt_smoke.rs  vllm_graph_repair_judge_smoke.rs
crates/rehydration-tests-kernel/: Cargo.toml
crates/rehydration-tests-kernel/src/: lib.rs
crates/rehydration-tests-kernel/tests/: agentic_event_integration.rs  agentic_integration.rs  kernel_full_journey_integration.rs  kernel_full_journey_tls_integration.rs  kernel_golden_integration.rs  kernel_p1_performance_measurement.rs  llm_graph_materialization_integration.rs  mcp_real_kernel_integration.rs  pir_graph_batch_integration.rs  relation_materialization_integration.rs  tier_resolution_integration.rs
crates/rehydration-tests-paper/: Cargo.toml
crates/rehydration-tests-paper/src/: lib.rs
crates/rehydration-tests-paper/tests/: llm_judge_prompt_evaluation.rs  relationship_use_case_ablation_integration.rs  relationship_use_case_integration.rs  vllm_benchmark_integration.rs
crates/rehydration-tests-shared/: Cargo.toml
crates/rehydration-tests-shared/src/: debug.rs  empty_ports.rs  error.rs  lib.rs
crates/rehydration-transport-grpc/: Cargo.toml
crates/rehydration-transport-grpc/src/: lib.rs  starship_e2e.rs
crates/rehydration-transport-grpc/tests/: agentic_event_integration.rs  agentic_integration.rs  agentic_rehydration_integration.rs  compatibility_integration.rs  grpc_roundtrip.rs  grpc_tls_roundtrip.rs  kernel_full_journey_integration.rs  kernel_full_journey_tls_integration.rs  kernel_golden_integration.rs  kernel_p1_performance_measurement.rs  llm_judge_prompt_evaluation.rs  relationship_use_case_ablation_integration.rs  relationship_use_case_integration.rs  starship_real_llm_demo.rs  tier_resolution_integration.rs  vllm_benchmark_integration.rs
crates/underpass-operator-benchmark-adapters-cli/: Cargo.toml
crates/underpass-operator-evaluation-application/: Cargo.toml
crates/underpass-operator-evaluation-application/src/: errors.rs  lib.rs  ports.rs
crates/underpass-operator-evaluation-cli/: Cargo.toml
crates/underpass-operator-evaluation-domain/: Cargo.toml
crates/underpass-operator-evaluation-domain/src/: lib.rs  policy_eval.rs
crates/underpass-operator-evaluation-infra/: Cargo.toml
crates/underpass-operator-evaluation-infra/src/: contract_coverage_observer.rs  jsonl_value_reader.rs  lib.rs  (+1 more)
crates/underpass-operator-replay-application/: Cargo.toml
crates/underpass-operator-replay-cli/: Cargo.toml
crates/underpass-operator-replay-domain/: Cargo.toml
crates/underpass-operator-replay-infra/: Cargo.toml
crates/underpass-operator-shared-application/: Cargo.toml
crates/underpass-operator-shared-contract/: Cargo.toml
crates/underpass-operator-shared-domain/: Cargo.toml
crates/underpass-operator-shared-infra/: Cargo.toml
crates/underpass-operator-synthetic-application/: Cargo.toml
(+1042 files in other folders)
