[workspace]
members = [
    "crates/rehydration-adapter-nats",
    "crates/rehydration-adapter-neo4j",
    "crates/rehydration-adapter-valkey",
    "crates/rehydration-application",
    "crates/rehydration-config",
    "crates/rehydration-domain",
    "crates/rehydration-observability",
    "crates/rehydration-ports",
    "crates/rehydration-proto",
    "crates/rehydration-server",
    "crates/rehydration-testkit",
    "crates/rehydration-tests-shared",
    "crates/rehydration-tests-kernel",
    "crates/rehydration-tests-paper",
    "crates/rehydration-transport-grpc",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
version = "0.1.0"
license = "Apache-2.0"
description = "Node-centric context rehydration engine for agentic systems"
repository = "https://github.com/underpass-ai/rehydration-kernel"

[workspace.dependencies]
neo4rs = "0.8.0"
rehydration-adapter-nats = { path = "crates/rehydration-adapter-nats" }
rehydration-adapter-neo4j = { path = "crates/rehydration-adapter-neo4j" }
rehydration-adapter-valkey = { path = "crates/rehydration-adapter-valkey" }
rehydration-application = { path = "crates/rehydration-application" }
rehydration-config = { path = "crates/rehydration-config" }
rehydration-domain = { path = "crates/rehydration-domain" }
rehydration-observability = { path = "crates/rehydration-observability" }
rehydration-ports = { path = "crates/rehydration-ports" }
rehydration-proto = { path = "crates/rehydration-proto" }
rehydration-testkit = { path = "crates/rehydration-testkit" }
rehydration-tests-shared = { path = "crates/rehydration-tests-shared" }
rehydration-transport-grpc = { path = "crates/rehydration-transport-grpc" }
prost = "0.13.5"
prost-types = "0.13.5"
sha2 = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tiktoken-rs = "0.9.1"
tonic = { version = "0.12.3", features = ["transport", "tls"] }
tonic-build = "0.12.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "metrics", "tls"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"

[patch.crates-io]
async-nats = { path = "vendor/async-nats" }
