[package]
name = "rehydration-adapter-nats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rehydration-application.workspace = true
rehydration-domain.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rehydration-testkit.workspace = true
tokio.workspace = true
