[package]
name = "rehydration-adapter-nats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
async-nats = "0.39.0"
rehydration-application.workspace = true
rehydration-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
rehydration-testkit.workspace = true
testcontainers = "0.24.0"
tokio.workspace = true
tokio-rustls = "0.26.4"

[[test]]
name = "runtime_integration"
path = "tests/runtime_integration.rs"
required-features = ["container-tests"]
