[package]
name = "rehydration-adapter-neo4j"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
neo4rs.workspace = true
rehydration-domain.workspace = true
rehydration-ports.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers = "0.24.0"

[[test]]
name = "neo4j_integration"
path = "tests/neo4j_integration.rs"
required-features = ["container-tests"]
