[package]
name = "rehydration-adapter-valkey"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
rehydration-domain.workspace = true
rehydration-ports.workspace = true
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26.4"

[dev-dependencies]
rehydration-testkit.workspace = true
tempfile = "3.26.0"
testcontainers = "0.24.0"

[[test]]
name = "valkey_integration"
path = "tests/valkey_integration.rs"
required-features = ["container-tests"]
