[package]
name = "rehydration-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rehydration-domain.workspace = true
rehydration-ports.workspace = true
serde.workspace = true

[dev-dependencies]
rehydration-testkit.workspace = true
tokio.workspace = true
