[package]
name = "rehydration-demo-starship"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-nats = "0.39.0"
rehydration-proto.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
