[package]
name = "rehydration-mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description = "Stdio MCP adapter for Kernel Memory Protocol"
repository.workspace = true

[dependencies]
rehydration-proto.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
tokio-stream.workspace = true

[lints]
workspace = true
