[package]
name = "rehydration-mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
description = "Stdio MCP adapter for Kernel Memory Protocol"
repository.workspace = true

[dependencies]
rehydration-proto.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = "0.26.4"
tonic.workspace = true

[dev-dependencies]
tempfile = "3.26.0"
tokio-stream.workspace = true

[lints]
workspace = true
