[package]
name = "rehydration-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lightweight public plugin API for the Rehydration Kernel"
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
