[package]
name = "rehydration-proto"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
