[package]
name = "rehydration-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-nats = "0.46.0"
rehydration-application.workspace = true
rehydration-domain.workspace = true
rehydration-proto.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
tokio-rustls = "0.26.4"
tonic.workspace = true
