[package]
name = "rehydration-tests-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Hexagonal test infrastructure: containers, fixtures, seed strategies"

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
async-nats = "0.39.0"
neo4rs.workspace = true
rehydration-adapter-nats.workspace = true
rehydration-adapter-neo4j.workspace = true
rehydration-adapter-valkey.workspace = true
rehydration-application.workspace = true
rehydration-config.workspace = true
rehydration-domain.workspace = true
rehydration-ports.workspace = true
rehydration-proto.workspace = true
rehydration-testkit.workspace = true
rehydration-transport-grpc.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.26.0"
testcontainers = "0.24.0"
tokio.workspace = true
tokio-rustls = "0.26.4"
tokio-stream.workspace = true
tonic.workspace = true
