[package]
name = "rehydration-transport-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
rehydration-application.workspace = true
rehydration-config.workspace = true
rehydration-domain.workspace = true
rehydration-ports.workspace = true
rehydration-proto.workspace = true
prost-types.workspace = true
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
async-nats = "0.39.0"
neo4rs.workspace = true
rehydration-adapter-nats.workspace = true
rehydration-adapter-neo4j.workspace = true
rehydration-adapter-valkey.workspace = true
serde.workspace = true
rehydration-testkit.workspace = true
serde_json.workspace = true
testcontainers = "0.24.0"

[[test]]
name = "compatibility_integration"
path = "tests/compatibility_integration.rs"
required-features = ["container-tests"]

[[test]]
name = "agentic_integration"
path = "tests/agentic_integration.rs"
required-features = ["container-tests"]
