[package]
name = "rehydration-transport-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
container-tests = []

[dependencies]
async-nats = "0.39.0"
rehydration-application.workspace = true
rehydration-config.workspace = true
rehydration-domain.workspace = true
rehydration-ports.workspace = true
rehydration-proto.workspace = true
prost-types.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
tokio-rustls = "0.26.4"

[dev-dependencies]
neo4rs.workspace = true
rehydration-adapter-nats.workspace = true
rehydration-adapter-neo4j.workspace = true
rehydration-adapter-valkey.workspace = true
rehydration-testkit.workspace = true
tempfile = "3.26.0"
testcontainers = "0.24.0"

[[test]]
name = "agentic_integration"
path = "tests/agentic_integration.rs"
required-features = ["container-tests"]

[[test]]
name = "agentic_event_integration"
path = "tests/agentic_event_integration.rs"
required-features = ["container-tests"]

[[test]]
name = "kernel_full_journey_tls_integration"
path = "tests/kernel_full_journey_tls_integration.rs"
required-features = ["container-tests"]

[[test]]
name = "kernel_golden_integration"
path = "tests/kernel_golden_integration.rs"
required-features = ["container-tests"]

[[test]]
name = "vllm_benchmark_integration"
path = "tests/vllm_benchmark_integration.rs"
required-features = ["container-tests"]
