[package]
name = "rehydration-transport-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-nats = "0.39.0"
rehydration-application.workspace = true
rehydration-config.workspace = true
rehydration-domain.workspace = true
rehydration-ports.workspace = true
rehydration-proto.workspace = true
prost-types.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tokio.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
tokio-rustls = "0.26.4"

[dev-dependencies]
rehydration-testkit.workspace = true
tempfile = "3.26.0"
