[package]
name = "underpass-operator-benchmark-adapters-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "External benchmark adapters for Operator trajectories"
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
underpass-operator-shared-domain.workspace = true
