[package]
name = "underpass-operator-evaluation-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Application use cases for the Operator evaluation bounded context"
repository.workspace = true

[lints]
workspace = true

[dependencies]
underpass-operator-evaluation-domain.workspace = true
underpass-operator-shared-domain.workspace = true

[dev-dependencies]
serde_json.workspace = true
