[package]
name = "underpass-operator-replay-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Application use cases for the Operator replay bounded context"
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
underpass-operator-replay-domain.workspace = true

[dev-dependencies]
tokio.workspace = true
