[package]
name = "underpass-operator-replay-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Infrastructure adapters for the Operator replay bounded context"
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
underpass-operator-replay-domain.workspace = true
underpass-operator-shared-domain.workspace = true
