[package]
name = "underpass-operator-shared-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain model for the Underpass Operator training subsystem"
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
