[package]
name = "underpass-operator-synthetic-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Application use cases for the Operator synthetic data bounded context"
repository.workspace = true

[lints]
workspace = true

[dependencies]
underpass-operator-shared-domain.workspace = true
underpass-operator-synthetic-domain.workspace = true

[dev-dependencies]
serde_json.workspace = true
